Add Prettier configuration and update extension recommendations

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "files.autoSave": "afterDelay",
     "editor.tabSize": 4,
-    "files.autoSaveDelay": 1000
+    "files.autoSaveDelay": 1000,
+    "prettier.tabWidth": 4
 }
