--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
     "recommendations": [
         "vscjava.vscode-java-pack",
         "jetbrains.kotlin",
-        "aaron-bond.better-comments"
+        "aaron-bond.better-comments",
+        "esbenp.prettier-vscode"
     ]
 }
