Remove comment from google() repository line

--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -1,6 +1,6 @@
 repositories {
     mavenCentral()
-    google() // Needed for androidx
+    google()
     maven { url = 'https://maven.brott.dev/' }
 }
 
