--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "files.autoSave": "afterDelay",
     "editor.tabSize": 4,
     "files.autoSaveDelay": 1000,
-    "prettier.tabWidth": 4
+    "prettier.tabWidth": 4,
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
