fix: remove editor files

--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,10 @@
 
 !libs/*.aar
 
-**/org.eclipse.*
-**/.project
-**/.classpath
+# **/org.eclipse.*
+# **/.project
+# **/.classpath
+# .settings
 
 # Files for the ART/Dalvik VM
 *.dex
